Fixed synergy on weapon change. More robust handling on querySelector results.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
                     <div id="search_box"><input title="search" id="search_input" type="text" onchange="searchChange()" onkeyup="searchChange()" /></div>
                 </div>
             </div>
+            <div id="legend_div">
+                <div class="applyreact legend">Apply & React</div>
+                <div class="apply legend">Apply Only</div>
+                <div class="react legend">React Only</div>
+                <div class="synergy legend"> Synergies</div>
+            </div>
         </div>
         <div id="radio_div" class="radio_accordion">
             <div id="radio_div_w0" class="radio_set">&nbsp;</div>
